--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 <body>
     <h1>Stock Profit & Loss Calculator</h1>
     <label for="initial-price">Intial Price</label>
-    <input type="text" id="initial-price" placeholder="Intial Price of Stocks">
+    <input type="number" id="initial-price" placeholder="Intial Price of Stocks">
     <label for="stocks-quantity">Quantity of Stocks</label>
-    <input type="text" id="stocks-quantity" placeholder="Number of Stocks Bought">
+    <input type="number" id="stocks-quantity" placeholder="Number of Stocks Bought">
     <label for="current-price">Current Price</label>
-    <input type="text" id="current-price" placeholder="Current Price of Stocks"> 
+    <input type="number" id="current-price" placeholder="Current Price of Stocks"> 
     <button id="submit-btn">Tell Me!!</button>
     <div id="output-box"></div>
+    <script src="/app.js"></script>
 </body>
 </html>
